refactor(registry): update listener registry implementation for thread safety